CHANGES
=======

* Create README.md
* Add AUTHORS info and .gitignore
* Add setup files
* Initial commit